Fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,8 @@ h5 {
     text-align: center;
     margin: 5px;
     padding-bottom: 130px;
+    font-weight: bold;
+    font-size:30px;
   }
 
   #scoreBox {
@@ -98,6 +100,8 @@ h5 {
     text-align: center;
     margin: 5px;
     padding-bottom: 130px;
+    font-weight: bold;
+    font-size:30px;
   }
   
   #font {
@@ -120,6 +124,7 @@ h5 {
   
   #inputBox {
     height: 50px;
+    width: 720px;
   }
   
   #prompts {
@@ -145,6 +150,8 @@ h5 {
     text-align: center;
     margin: 5px;
     padding-bottom: 140px;
+    font-weight: bold;
+    font-size:30px;
   }
   
   #victoryimg img{
